syntax = "proto3";

package programming_lab.prolab_accounts;

option go_package = "github.com/ProgrammingLab/prolab-accounts/api;api_pb";


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service SessionService {
  rpc GetSession (GetSessionRequest) returns (Session) {
    option (google.api.http) = {
      get: "/sessions"
    };
  }
  rpc CreateSession (CreateSessionRequest) returns (Session) {
    option (google.api.http) = {
      post: "/sessions"
      body: "*"
    };
  }
  rpc DeleteSession (DeleteSessionRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/sessions"
    };
  }
}

message Session {
  string session_id = 1;
}

message GetSessionRequest {}

message CreateSessionRequest {
  string name = 1;
  string password = 2;
}

message DeleteSessionRequest {}
